# ore-sdk

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
cmake/: add_gtest_executable.cmake  clang_format.cmake  cmake_format.cmake  code_analysis.cmake  code_format.cmake
include/ore/: sdk.h
include/ore/sdk/: backend.h  compilation_exception.h  compilation_exception_type.h  core.h  deserialization_exception.h  exception.h  exception_type.h  frontend.h  info.h  sdk.h  serializable.h  serialization_exception.h  serializer.h  version.h
include/ore/sdk/backend/: translator.h
include/ore/sdk/core/: compiler.h  opr.h
include/ore/sdk/exception/: compilation_error.h  deserialization_error.h  exception.h  link_error.h  parse_error.h  serialization_error.h  translation_error.h
include/ore/sdk/frontend/: ast.h  parser.h  types.h
include/ore/sdk/serializer/: concepts.h  serializer.h
src/: CMakeLists.txt  Config.cmake.in  compilation_exception.cpp  compilation_exception_type.cpp  deserialization_exception.cpp  exception.cpp  exception_type.cpp  info.cpp.in  serializable.cpp  serialization_exception.cpp  serializer.cpp  version.cpp.in
src/backend/: CMakeLists.txt  translator.cpp
src/backend/test/: CMakeLists.txt  ut_include_backend.cpp  ut_translator.cpp
src/core/: CMakeLists.txt  compiler.cpp  opr.cpp
src/core/test/: CMakeLists.txt  ut_compiler.cpp  ut_include_core.cpp  ut_opr.cpp
src/exception/: CMakeLists.txt  compilation_error.cpp  deserialization_error.cpp  exception.cpp  helper.h  link_error.cpp  parse_error.cpp  serialization_error.cpp  translation_error.cpp
src/exception/test/: CMakeLists.txt  ut_compilation_error.cpp  ut_deserialization_error.cpp  ut_exception.cpp  ut_include_exception.cpp  ut_link_error.cpp  ut_parse_error.cpp  ut_serialization_error.cpp  ut_translation_error.cpp
src/frontend/: CMakeLists.txt  ast.cpp  parser.cpp
src/frontend/test/: CMakeLists.txt  ut_ast.cpp  ut_include_frontend.cpp  ut_parser.cpp
src/sdk/: CMakeLists.txt  sdk.cpp
src/sdk/test/: CMakeLists.txt  ut_sdk.cpp
src/serializer/: CMakeLists.txt
src/serializer/test/: CMakeLists.txt  ut_include_serializer.cpp  ut_serializer.cpp
src/test/: CMakeLists.txt  ut_compilation_exception.cpp  ut_compilation_exception_type.cpp  ut_deserialization_exception.cpp  ut_exception.cpp  ut_exception_type.cpp  ut_include_sdk.cpp  ut_sdk_include.cpp  ut_serializable.cpp  ut_serialization_exception.cpp  ut_serializer.cpp
